--- a/public/css/estiloWelcome.css
+++ b/public/css/estiloWelcome.css
@@ -38,12 +38,35 @@ html, body {
     text-align: center;
 
 }
+.navbar{
+    margin-bottom: 0px;
+}
+.navbar-default{
+    background-color: #313131;
 
+}
+.navbar-brand{
+    margin-top: 10px;
+    font-family: ZenzaiItacha;
+    font-size: 42px;
+    color: white;
+}
+.navbar-inverse .navbar-brand{
+    color: white;
+    text-shadow: 3px 3px 3px black;
+}
+.navbar-inverse .navbar-nav>li>a{
+    color: white;
+    text-shadow: 3px 3px 3px black;
+    font-weight: 700;
+}
 .title {
-    font-size: 114px;
+    font-size: 94px;
     color: white;
     font-family: ZenzaiItacha;
     text-shadow: 5px 5px 5px black;
+    margin: auto;
+    padding-top: 100px;
 }
 
 .links > a {
@@ -57,6 +80,25 @@ html, body {
 }
 
 .m-b-md {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 
+}
+#brindis{
+    background-image: url("/image/chinchin.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment:fixed ;
+    height: 350px;
+    width: 100%;
+    max-width: 100%;
+    padding:0;
+    margin:0;
+    margin-top: 0px;
+}
+#mapid {
+    height: 450px;
+    width: 100%;
+    max-width: 100%;
+    padding:0;
+    margin:0;
 }
