--- a/public/css/estiloWelcome.css
+++ b/public/css/estiloWelcome.css
@@ -2,7 +2,7 @@
 html, body {
 
     color: #636b6f;
-    background-color: #313131;
+    background-color: whitesmoke;
     font-weight: 100;
     height: 100vh;
     margin: 0;
@@ -61,12 +61,12 @@ html, body {
     font-weight: 700;
 }
 .title {
-    font-size: 94px;
+    font-size: 44px;
     color: white;
-    font-family: ZenzaiItacha;
-    text-shadow: 5px 5px 5px black;
+    font-family: Arial;
+    text-shadow: 3px 3px 2px black;
     margin: auto;
-    padding-top: 100px;
+    padding-top: 250px;
 }
 
 .links > a {
@@ -88,7 +88,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment:fixed ;
-    height: 350px;
+    height: 600px;
     width: 100%;
     max-width: 100%;
     padding:0;
@@ -101,4 +101,72 @@ html, body {
     max-width: 100%;
     padding:0;
     margin:0;
+}
+#info{
+    height: 400px;
+    width: 100%;
+    max-width: 100%;
+    padding:0;
+    margin:0;
+    background-color: whitesmoke;
+
+}
+#pnaizq{
+    padding-top: 20px;
+    color: black;
+    width: 50%;
+    float: left;
+}
+#pnaizq>h2{
+    float: left;
+    margin-left: 5%;
+    text-align: left;
+
+}
+#pnaizq>h3{
+    float: left;
+    margin-left: 5%;
+    color: grey;
+    text-align: left;
+}
+#pnadr{
+    padding-top: 20px;
+    color: black;
+    width: 50%;
+    float: left;
+}
+#cuadrin{
+    background-color: white;
+    border: solid 1px grey;
+    margin: 10px;
+    margin-left: 50px;
+    height: 200px;
+    width: auto;
+}
+#abu{
+    background-image: url("/image/abuela.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 198px;
+    width: 250px;
+    float: left;
+
+}
+#cuadrin>h2{
+    float: left;
+    margin-left: 20px;
+}
+#cuadrin>h4{
+    float: left;
+    margin-left: 20px;
+    color: grey;
+}
+
+#foot{
+    height: 200px;
+    width: 100%;
+    max-width: 100%;
+    padding:0;
+    margin:0;
+    background-color: whitesmoke;
 }
