--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,5 +1,50 @@
-#map{
-    width: 300px;
-    height: 200px;
-    background-color: red;
+html, body {
+
+    color: #636b6f;
+    background-color: whitesmoke;
+    font-weight: 100;
+    height: 100vh;
+    margin: 0;
+    font-family: Poetsen;
+}
+@font-face {
+    font-family: ZenzaiItacha;
+    src: url('../font/ZenzaiItacha.ttf');
+
+}
+@font-face {
+    font-family: Poetsen;
+    src: url('../font/PoetsenOne-Regular.ttf');
+
+}
+.navbar{
+    margin-bottom: 0px;
+}
+.navbar-default{
+    background-color: #313131;
+
+}
+.navbar-brand{
+    margin-top: 10px;
+    font-family: ZenzaiItacha;
+    font-size: 42px;
+    color: white;
+}
+.navbar-inverse .navbar-brand{
+    color: white;
+    text-shadow: 3px 3px 3px black;
+}
+.navbar-inverse .navbar-nav>li>a{
+    color: white;
+    text-shadow: 3px 3px 3px black;
+    font-weight: 700;
+    font-size: 18px;
+}
+.title {
+    font-size: 44px;
+    color: white;
+    font-family: Poetsen;
+    text-shadow: 0px 0px 3px black;
+    margin: auto;
+    padding-top: 250px;
 }
