--- a/public/css/estiloWelcome.css
+++ b/public/css/estiloWelcome.css
@@ -91,7 +91,7 @@ html, body {
 
 }
 #brindis{
-    background-image: url("/image/chinchin.png");
+    background-image: url("../image/chinchin.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment:fixed ;
@@ -172,7 +172,7 @@ html, body {
     width: auto;
 }
 #abu{
-    background-image: url("/image/abuela.jpg");
+    background-image: url("../image/abuela.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 198px;
@@ -219,4 +219,7 @@ html, body {
 }
 #boton{
     float: right;
+}
+.buscador{
+    text-align: center;
 }
